syntax = "proto3";
option java_multiple_files = true;

service HospitalService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc RetrievePatientInfo (PatientInfoRequest) returns (PatientInfoReply) {}
  rpc Login(LoginRequest) returns (LoginReply) {}
}
enum Role {
  LAB_EMPLOYEE = 0;
  DOCTOR = 1;
  NURSE = 2;
  PATIENT_SERVICES_ASSISTANT = 3;
  CLINICAL_ASSISTANT = 4;
  PORTER_VOLUNTEER = 5;
  WARD_CLERK = 6;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message PatientInfoRequest {
//  enum Role {
//    LAB_EMPLOYEE = 0;
//    DOCTOR = 1;
//    NURSE = 2;
//    PATIENT_SERVICES_ASSISTANT = 3;
//    CLINICAL_ASSISTANT = 4;
//    PORTER_VOLUNTEER = 5;
//    WARD_CLERK = 6;
//  }
  int32 patientID = 1;
  Role role = 2;
  repeated int32 selections = 3;
}
message PatientInfoReply {
  oneof info {
    MedicalRecords records = 1;
    string permissionDenied = 2;
  }
}

message MedicalRecords {
  optional string name = 1;
  optional string surname = 2;
  PersonalData personalData = 3;
  repeated string problems = 4;
  repeated string medications = 5;
  string healthHistory = 6;
  string allergies = 7;
  repeated VisitDate visitsHistory = 8;
}

message PersonalData {
  optional string homeAddress = 4;
  string email = 5;
  string healthNumber = 6;
}

message VisitDate {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message LoginRequest {
  string username = 1;
  bytes password = 2;
}

message LoginReply {
  enum Code {
    SUCCESS = 0;
    WRONGUSER = 1;
    WRONGPASS = 2;
  }
//  enum Role {
//    LAB_EMPLOYEE = 0;
//    DOCTOR = 1;
//    NURSE = 2;
//    PATIENT_SERVICES_ASSISTANT = 3;
//    CLINICAL_ASSISTANT = 4;
//    PORTER_VOLUNTEER = 5;
//    WARD_CLERK = 6;
//  }
  Code code = 1;
  Role role = 2;
}

